@@ -192,7 +192,7 @@ uname -r | grep BOOT ||
 /sbin/depmod -a -F /boot/System.map-%{kernelversion} %{kernelversion} >/dev/null 2>&1 || true
 
 %changelog
-* Mon Feb  4 2008 11:17:00 +0200 Philipp Reisner <phil@linbit.com>
+* Mon Feb  6 2008 12:17:00 +0200 Philipp Reisner <phil@linbit.com>
 - drbd (8.0.9-1)
  * In case our backing devices support write barriers and cache
    flushes, we use these means to ensure data integrity in
@@ -202,11 +202,15 @@ uname -r | grep BOOT ||
    endlessly after the local disk was lost.
  * Fixed protocol A for BIOs larger than the page size. If you
    hit the bug, DBBD would simply lose connection.
+ * Don't accitentally truncate the device in case a secondary with
+   a too small disk gets connected.
  * Changed state processing so that state changes visible
    via the drbdsetup events interface are always in the right order.
  * Made drbddisk's exit codes more LSB compliant.
  * Back-ported the new drbdmeta to drbd-8.0 (from drbd-8.2).
  * More robustness to the code that establishes connections.
+ * Made '/etc/init.d/drbd status' to print a nice overview.
+ * Made it to compile on Linux-2.6.24.
 
 * Fri Dec  6 2007 14:00:00 +0200 Philipp Reisner <phil@linbit.com>
 - drbd (8.0.8-1)
